Выполнены 1,2 пункты ЛР3
